apps/gitea/05-https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: gitea
spec:
  redirectScheme:
    scheme: https
    permanent: true
